--- a/src/component/guestbook/index.scss
+++ b/src/component/guestbook/index.scss
@@ -1,3 +1,103 @@
+.guestbook {
+  .post {
+    text-align: left;
+    box-shadow: 0.1rem 0.1rem 0.3rem 0 rgba(0, 0, 0, 0.1);
+    background-color: var(--white-color);
+    border-radius: 0.5rem;
+    border: 1px solid var(--light-grey-color);
+    font-size: 0.9rem;
+    margin-top: 0.2rem;
+
+    .heading {
+      margin: 0.5rem;
+      display: flex;
+      justify-content: flex-end;
+
+      .close-button {
+        position: relative;
+        z-index: 3;
+        width: 0.8rem;
+        height: 0.8rem;
+
+        &::before {
+          content: "";
+          width: 0.1rem;
+          height: 100%;
+          background-color: var(--dark-grey-color);
+          position: absolute;
+          transform: rotate(45deg);
+          top: 0;
+          left: 50%;
+        }
+
+        &::after {
+          content: "";
+          width: 0.1rem;
+          height: 100%;
+          background-color: var(--dark-grey-color);
+          position: absolute;
+          transform: rotate(135deg);
+          top: 0;
+          left: 50%;
+        }
+      }
+    }
+
+    .body {
+      margin: 0 1.3rem 1.3rem 1.3rem;
+
+      .title {
+        display: flex;
+        align-items: center;
+        margin-bottom: 0.8rem;
+
+        .name {
+          margin-right: 0.5rem;
+        }
+
+        .date {
+          font-size: 0.8rem;
+          opacity: 0.5;
+        }
+      }
+
+      .content {
+        word-wrap: break-word;
+        white-space: pre-wrap;
+      }
+    }
+  }
+
+  /* ✅ 페이지네이션 추가 */
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+
+    .page {
+      padding: 0.3rem 0.5rem;
+      margin: 0 0.2rem;
+      border: 1px solid var(--dark-grey-color);
+      border-radius: 0.3rem;
+      cursor: pointer;
+      user-select: none;
+
+      &.current {
+        background-color: var(--theme-color);
+        color: var(--white-color);
+      }
+
+      &:hover:not(.current) {
+        background-color: var(--light-grey-color);
+      }
+    }
+  }
+}
+
+
+
+
 /* ✏️ 방명록 작성 모달 */
 .write-guestbook-modal {
   width: 22rem;
