--- a/src/component/guestbook/index.scss
+++ b/src/component/guestbook/index.scss
@@ -95,26 +95,22 @@
   }
 }
 
-
-
-
 /* ✏️ 방명록 작성 모달 */
 .write-guestbook-modal {
   width: 22rem;
-  height: 35rem; /* ⬆️ 세로로 키움 */
 
   .header {
     .title-group {
       text-align: center;
 
       .title {
-        font-size: 1.4rem; /* ⬆️ 제목 폰트만 확대 */
+        font-size: 1.2rem;
         color: var(--theme-color);
-        padding: 0.7rem;
+        padding: 0.5rem;
       }
 
       .subtitle {
-        font-size: 1rem; /* ⬆️ 부제목 폰트도 살짝 확대 */
+        font-size: 0.9rem;
       }
 
       padding-bottom: 1rem;
@@ -123,7 +119,7 @@
   }
 
   .content {
-    padding: 0 0.8rem 1rem 0.8rem;
+    padding: 0 0.7rem 0.7rem 0.7rem;
 
     .form {
       display: flex;
@@ -131,23 +127,21 @@
       margin-top: 1rem;
 
       input {
-        padding: 0.7rem;
-        margin-bottom: 0.7rem;
+        padding: 0.5rem;
+        margin-bottom: 0.5rem;
         border: 1px solid var(--light-grey-color);
         border-radius: 0.3rem;
         font-family: "MapoGoldenPier";
-        font-size: 1rem;
+        font-size: 0.8rem;
       }
 
       textarea {
-        padding: 0.7rem;
-        margin-bottom: 0.7rem;
+        padding: 0.5rem;
+        margin-bottom: 0.5rem;
         border: 1px solid var(--light-grey-color);
         border-radius: 0.3rem;
         font-family: "MapoGoldenPier";
-        font-size: 1rem;
-        height: 10rem;
-        resize: vertical;
+        font-size: 0.8rem;
       }
     }
   }
@@ -156,7 +150,9 @@
     display: flex;
     flex-direction: row;
 
-    /* ❌ 버튼은 절대 건드리지 않음 */
+    button {
+      width: 100%;
+    }
   }
 }
 
