--- a/src/component/cover/index.scss
+++ b/src/component/cover/index.scss
@@ -1,4 +1,6 @@
 .cover {
+  min-height: 100vh;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: flex-start; /* 패딩 기반 여백 확보용 */
