--- a/src/App.scss
+++ b/src/App.scss
@@ -9,16 +9,16 @@
 @use "./component/modal";
 
 :root {
-  --theme-color: #d99aa0;
-  --theme-bg-color: #fff5f6;
-  --alt-color: #b87a7e;
-  --alt-bg-color: #f8e9ea;
-  --dark-color: #3b2f31;
-  --dark-grey-color: #c6b9ba;
-  --light-grey-color: #e6dada;
-  --light-color: #fdfafa;
+  --theme-color: #f8b7c4;
+  --theme-bg-color: #fff8f9;
+  --alt-color: #f4a7b9;
+  --alt-bg-color: #fdeef1;
+  --dark-color: #3a2d2e;
+  --dark-grey-color: #d8c7ca;
+  --light-grey-color: #f1e6e7;
+  --light-color: #ffffff;
   --white-color: #ffffff;
-  --red-color: #e46a76;
+  --red-color: #ff9ea7;
 
   
   font-family: "MapoGoldenPier";
