--- a/src/component/information/index.scss
+++ b/src/component/information/index.scss
@@ -92,6 +92,11 @@
   .content {
     padding: 0 1rem 1rem 1rem;
     font-size: 1rem; /* ✅ 전체 본문 확대 */
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* 수평 가운데 정렬 */
+    justify-content: center; /* 수직 가운데 정렬 (필요 시) */
+    text-align: center; /* 텍스트도 중앙 */
 
     .form {
       display: flex;
