--- a/src/App.scss
+++ b/src/App.scss
@@ -9,16 +9,16 @@
 @use "./component/modal";
 
 :root {
-  --theme-color: #f8b7c4;
-  --theme-bg-color: #fff8f9;
-  --alt-color: #f4a7b9;
-  --alt-bg-color: #fdeef1;
-  --dark-color: #3a2d2e;
-  --dark-grey-color: #d8c7ca;
-  --light-grey-color: #f1e6e7;
-  --light-color: #ffffff;
+  --theme-color: #e78ca8;        
+  --theme-bg-color: #fff3f6;     
+  --alt-color: #d56b8b;         
+  --alt-bg-color: #fde6eb;      
+  --dark-color: #3a2d30;        
+  --dark-grey-color: #c8b5b8;    
+  --light-grey-color: #f3e7e9;   
+  --light-color: #ffffff;        
   --white-color: #ffffff;
-  --red-color: #ff9ea7;
+  --red-color: #ef7588;         
 
   
   font-family: "MapoGoldenPier";
