--- a/src/App.scss
+++ b/src/App.scss
@@ -9,16 +9,16 @@
 @use "./component/modal";
 
 :root {
-  --theme-color: #e78ca8;        
-  --theme-bg-color: #fff3f6;     
-  --alt-color: #d56b8b;         
-  --alt-bg-color: #fde6eb;      
-  --dark-color: #3a2d30;        
-  --dark-grey-color: #c8b5b8;    
-  --light-grey-color: #f3e7e9;   
-  --light-color: #ffffff;        
+  --theme-color: #f59bab;
+  --theme-bg-color: #fff6f7;
+  --alt-color: #ec748d;
+  --alt-bg-color: #ffecef;
+  --dark-color: #372f2f;
+  --dark-grey-color: #c9baba;
+  --light-grey-color: #f2e8e9;
+  --light-color: #ffffff;
   --white-color: #ffffff;
-  --red-color: #ef7588;         
+  --red-color: #f26c7f;
 
   
   font-family: "MapoGoldenPier";
