--- a/src/App.scss
+++ b/src/App.scss
@@ -9,16 +9,16 @@
 @use "./component/modal";
 
 :root {
-  --theme-color: #ff8585;
-  --theme-bg-color: #ffe7e7;
-  --alt-color: #d88a8a;
-  --alt-bg-color: #f7eaea;
-  --dark-color: #282c34;
-  --dark-grey-color: #d2d2d2;
-  --light-grey-color: #eaeaea;
-  --light-color: #f9f9f9;
+  --theme-color: #f27b8b;
+  --theme-bg-color: #fff7f8;
+  --alt-color: #e8647a;
+  --alt-bg-color: #ffe5ea;
+  --dark-color: #2e2525;
+  --dark-grey-color: #bdaaaa;
+  --light-grey-color: #f3e9eb;
+  --light-color: #fffefe;
   --white-color: #ffffff;
-  --red-color: #ff0000;
+  --red-color: #eb5f70;
   
   font-family: "MapoGoldenPier";
   font-size: clamp(16px, 3.2vw, 20px);
