--- a/src/App.scss
+++ b/src/App.scss
@@ -258,7 +258,7 @@ h2 {
   text-align: center;
 
   /* 로즈골드 그라데이션 */
-  background: linear-gradient(90deg, #d7a6a2 0%, #f5d4c7 50%, #d7a6a2 100%);
+  background: linear-gradient(90deg, #c06a78 0%, #e8a5a9 50%, #c06a78 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   color: transparent;
