--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @use "./component/cover";
 @use "./component/invitation";
+@use "./component/timeline";
 @use "./component/button";
 @use "./component/bgEffect";
 @use "./component/calendar";
