--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,7 @@
   .background .card,
   .background .information,
   .background .invitation,
+  .background .timeline,
   .background .guestbook,
   .background .footer {
     font-size: 1.1rem;
